tests/ut_mlabel/ut_mlabel.css
MLabelStyle {
    font: "sans" 11;
    color: #FF0000;

    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    margin-bottom: 0;

    reactive-margin-left: 0;
    reactive-margin-right: 0;
    reactive-margin-top: 0;
    reactive-margin-bottom: 0;

    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    padding-bottom: 0;
}

MLabelStyle#greyLabel {
    font: "sans" 16;
    color: #00FF00;
}

MLabelStyle#size10 {
    font: "sans" 10px;
}
MLabelStyle#size16 {
    font: "sans" 16px;
}
MLabelStyle#size100 {
    font: "sans" 100px;
}

MLabelStyle#width40 {
    preferred-size: 40 -1;
}

MLabelStyle#margins {
    margin-left: 4;
    margin-right: 4;
    margin-top: 6;
    margin-bottom: 6;
}
MLabelStyle {
    preferred-line-count: -1;
}
MLabelStyle#lineCount0 {
    preferred-line-count: 0;
}
MLabelStyle#lineCount1 {
    preferred-line-count: 1;
}
MLabelStyle#lineCount2 {
    preferred-line-count: 2;
}
MLabelStyle#lineCount3 {
    preferred-line-count: 3;
}
MLabelStyle#leftAligned {
    horizontal-alignment: left;
}
MLabelStyle#rightAligned {
    horizontal-alignment: right;
}
MLabelStyle#leftAbsoluteAligned1 {
    horizontal-alignment: absolute left;
}
MLabelStyle#leftAbsoluteAligned2 {
    horizontal-alignment: left absolute;
}
MLabelStyle#rightAbsoluteAligned1 {
    horizontal-alignment: absolute right;
}
MLabelStyle#rightAbsoluteAligned2 {
    horizontal-alignment: right absolute;
}

